...
        super.loadView()
        view.accessibilityIdentifier = "AnimalDetailVC"

        if(!createdFromMap) {
            let highlightAnimal = UIBarButtonItem(image: UIImage(named: "highlightAnimal"), style: .plain, target: self, action: #selector(highlightAnimalTapped))
            self.highlightAnimal = highlightAnimal
            highlightAnimal.accessibilityIdentifier = "AnimalDetail_HighlightAnimal"
            navigationItem.rightBarButtonItem = highlightAnimal
        }

        let scrollView = UIScrollView()
        self.scrollView = scrollView
        self.view.addSubview(scrollView)
...
    }

    private func prepareAnimalImageView() {
        guard let imageUrlString = viewModel.animal.value.image_url else { return }

        let imageAnimal = UIImageView()
        imageAnimal.accessibilityIdentifier = "AnimalDetail_MainImage"
        stackView.addArrangedSubview(imageAnimal)
        imageAnimal.sd_setImage(with: imageUrlString.getCleanedURL(),
                                placeholderImage: LexiconItemCellVM.placeholder_image,
                                options: .continueInBackground) { image, error, _, _ in
            if error != nil || image == nil {
                imageAnimal.isHidden = true
...
