...
        searchBar.sizeToFit()
        searchBar.placeholder = " Search..."
        searchBar.showsCancelButton = true

        let filterItem = UIBarButtonItem(image: UIImage(named: "animalFilter"), style: .plain, target: self, action: #selector(self.filterTapped))
        self.filterItem = filterItem
        filterItem.accessibilityIdentifier = "Filters_NavItem"

        let searchItem = UIBarButtonItem(barButtonSystemItem: .search, target: self, action: nil)
        self.searchItem = searchItem

        self.navigationItem.rightBarButtonItems = [searchItem, filterItem]

        let tableView = UITableView()
        tableView.dataSource = self
        tableView.delegate = self
        tableView.accessibilityIdentifier = "LexiconVC_TableView"

        tableView.register(LexiconItemCellVC.self, forCellReuseIdentifier: LexiconItemCellVC.identifier)
        view.addSubview(tableView)
        self.tableView = tableView

        let refreshControl = UIRefreshControl()
...
