...
        self.resetFilter = resetFilter
        navigationItem.rightBarButtonItem = resetFilter

        let tableView = UITableView()
        tableView.dataSource = self
        tableView.delegate = self
        tableView.accessibilityIdentifier = "AnimalFilterVC_TableView"
        tableView.separatorStyle = .none

        tableView.register(AnimalFilterItemCellVC.self, forCellReuseIdentifier: AnimalFilterItemCellVC.identifier)
        view.addSubview(tableView)
        self.tableView = tableView

...
