...
extension MapVC {
    /// Prepares TGMapView, map layers and other map related variables.
    private func prepareMapView() {
        let mapView = TGMapView()
        self.mapView = mapView
        view.addSubview(mapView)
        mapView.accessibilityIdentifier = "MapVC_InteractiveMap"
        mapView.mapViewDelegate = self
        mapView.gestureDelegate = self

        let min_zoom = CGFloat(viewModel.mapConfig.value.minZoom)
        mapView.cameraPosition = TGCameraPosition(center: viewModel.currLocation.value, zoom: min_zoom, bearing: 0, pitch: 0)
        mapView.minimumZoomLevel = min_zoom
...
